--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,9 @@
-/BallLauncher.class
 /DodgeBall.class
 /MyFirstTimer.class
+/Button.class
+/CreditsScreen.class
+/GraphicsGame.class
+/LevelScreen.class
+/QuitScreen.class
+/Screen.class
+/StartMenu.class
