--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="acm.jar"><attributes>
+	<classpathentry kind="lib" path="acm.jar">
+		<attributes>
 			<attribute name="javadoc_location" value="https://cs.stanford.edu/people/eroberts/jtf/javadoc/student/"/>
 		</attributes>
 	</classpathentry>
